--- a/DoctorNeedy/DoctorNeedy/Base.lproj/Main.storyboard
+++ b/DoctorNeedy/DoctorNeedy/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Locations-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Locations" automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" userLabel="Locations" customClass="LocationsViewController" customModule="DoctorNeedy" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,105 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r1v-WL-al2">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items/>
+                            </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qT0-kn-qwM">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="hZC-sW-me9">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hZC-sW-me9" id="zT1-iS-fCv">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qT0-kn-qwM" secondAttribute="bottom" id="0md-yE-RM9"/>
+                            <constraint firstAttribute="trailing" secondItem="qT0-kn-qwM" secondAttribute="trailing" id="1Dy-Bx-hFO"/>
+                            <constraint firstItem="r1v-WL-al2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3iX-U8-qPd"/>
+                            <constraint firstAttribute="trailing" secondItem="r1v-WL-al2" secondAttribute="trailing" id="Cap-hb-cCs"/>
+                            <constraint firstItem="qT0-kn-qwM" firstAttribute="top" secondItem="r1v-WL-al2" secondAttribute="bottom" id="UpR-7E-n7L"/>
+                            <constraint firstItem="r1v-WL-al2" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="rBh-RQ-bQJ"/>
+                            <constraint firstItem="qT0-kn-qwM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="vit-Kf-61M"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Doctors-->
+        <scene sceneID="maa-NE-xJg">
+            <objects>
+                <viewController storyboardIdentifier="Doctors" automaticallyAdjustsScrollViewInsets="NO" id="6mD-nw-X0l" userLabel="Doctors" customClass="DoctorsViewController" customModule="DoctorNeedy" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="13h-ol-cXA"/>
+                        <viewControllerLayoutGuide type="bottom" id="QZQ-R2-NyS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="slV-q8-jo2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WhS-O4-nMI">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items/>
+                            </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rId-tm-PHA">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="v0T-QF-52U">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="v0T-QF-52U" id="0WJ-qx-SvD">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QZQ-R2-NyS" firstAttribute="top" secondItem="rId-tm-PHA" secondAttribute="bottom" id="2Cl-w5-X6i"/>
+                            <constraint firstItem="rId-tm-PHA" firstAttribute="top" secondItem="WhS-O4-nMI" secondAttribute="bottom" id="6NX-sn-U5c"/>
+                            <constraint firstItem="rId-tm-PHA" firstAttribute="leading" secondItem="slV-q8-jo2" secondAttribute="leading" id="DVa-Eb-Uqs"/>
+                            <constraint firstItem="WhS-O4-nMI" firstAttribute="top" secondItem="13h-ol-cXA" secondAttribute="bottom" id="EUz-sn-B11"/>
+                            <constraint firstAttribute="trailing" secondItem="rId-tm-PHA" secondAttribute="trailing" id="L6v-bn-MuV"/>
+                            <constraint firstItem="WhS-O4-nMI" firstAttribute="leading" secondItem="slV-q8-jo2" secondAttribute="leading" id="Vxp-hq-4AE"/>
+                            <constraint firstAttribute="trailing" secondItem="WhS-O4-nMI" secondAttribute="trailing" id="Yvu-RU-Y6d"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kwA-7x-7ud" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="836" y="47"/>
+        </scene>
+        <!--DoctorProfile-->
+        <scene sceneID="EO1-rc-Ou0">
+            <objects>
+                <viewController storyboardIdentifier="DoctorProfile" id="Q8d-Jn-HZY" userLabel="DoctorProfile" customClass="DoctorProfileViewController" customModule="DoctorNeedy" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7ww-po-JzI"/>
+                        <viewControllerLayoutGuide type="bottom" id="udP-aa-4VV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Pxj-1z-vU1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="182-cd-xHx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1617" y="46"/>
         </scene>
     </scenes>
 </document>
